src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Accept_Referral__c</fullName>
        <label>Accept Referral</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountRecord_Type_Hidden__c</fullName>
        <description>This is used for mapping lead record type to account record type. Specifically for the conversions with the Potential provider and New Assistant</description>
        <label>AccountRecord Type (Hidden)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Ineligibility_Criteria__c</fullName>
        <formula>IF( NOT(ISPICKVAL(License_Type__c , &quot;Regular&quot;)), &quot;Provider is not on a regular license&quot;,&quot;&quot;)

&amp;

IF( NOT(ISPICKVAL(Provider_Status__c , &quot;Current&quot;)) &amp;&amp; NOT(ISPICKVAL(Provider_Status__c , &quot;Renewal in Progress&quot; )), &quot;, Provider&apos;s license is not current&quot;, &quot;&quot;)

&amp; 

IF ( Last_Address_Change_Date__c &gt;=  Last_Licensing_Visit__c , &quot;, Provider&apos;s address has changed since last qualifying licensing visit&quot;, &quot;&quot;)

&amp;

IF (  Last_Provider_Type_Change_Date__c &gt;=  Last_Licensing_Visit__c , &quot;, Provider&apos;s type has changed since last qualifying licensing visit&quot;, &quot;&quot;)

&amp;

IF ( Last_Legal_Order_Change_Date__c  &gt;=  Last_Licensing_Visit__c , &quot;, Provider has been involved in a legal action since the last qualifying licensing visit&quot;, &quot;&quot;)

&amp; 

IF ( Number_Of_Open_Complaints_Investigations__c &gt;0, &quot;, Provider has &quot; + TEXT(Number_Of_Open_Complaints_Investigations__c) + &quot; open complaints&quot;, &quot;&quot;)

&amp;

IF (  Last_Change_of_Director_Date__c   &gt;=  Last_Licensing_Visit__c , &quot;, Provider has changed licensee / administrator - director since the last qualifying licensing visit&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Ineligibility Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administer_Own_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Administer Own School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_New_Application_as_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow New Application as Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Renewal_as_Assistant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Renewal as Assistant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Approved_Reg_766__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved Reg. 766</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asleep_Ratio__c</fullName>
        <description>This field replaces Number of Night Staff and Number of Night Residents by just providing a ratio instead</description>
        <inlineHelpText>Staff to child ratio when residents are asleep (overnight)</inlineHelpText>
        <label>Asleep Ratio</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Me_Or_Subordinates__c</fullName>
        <description>Used in report to filter on my Providers and the ones of my team. Used for Supervisor dashboard</description>
        <formula>OR(
 Assigned_to_Me__c ,
  $User.Id  =   Owner.ManagerId ,
   $User.Id  =   Owner.Manager.ManagerId )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Me Or Subordinates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Me__c</fullName>
        <description>Used in report to filter on the Provider Licensor&apos;s (My Providers)</description>
        <formula>OwnerId =  $User.Id</formula>
        <label>Assigned to Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assistant_Certificate_Type__c</fullName>
        <formula>IF((TEXT(License_Type__c) = &quot;Regular Assistant&quot;), &quot;Regular&quot;, &quot;Certified&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assistant Certificate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_CCRR__c</fullName>
        <formula>Provider_City__r.CCRR__r.Name</formula>
        <label>Associated CCRR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Awake_Ratio__c</fullName>
        <description>This field replaces Number of Day Staff and Number of Day Residents by just providing a ratio instead</description>
        <inlineHelpText>Staff to child ratio when residents are awake</inlineHelpText>
        <label>Awake Ratio</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Approved_Date__c</fullName>
        <label>BRC Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BRC Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bi_lingual_Licensor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bi-lingual Licensor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <label>Business Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cafeteria_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cafeteria Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_Communicate_in_English__c</fullName>
        <label>Can Communicate in English</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <inlineHelpText>License total authorized capacity</inlineHelpText>
        <label>Capacity</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certified_As__c</fullName>
        <label>Certified As</label>
        <picklist>
            <picklistValues>
                <fullName>Regular Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Family Child Care Assistant (6)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Family Child Care Assistant (8)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Family Child Care Assistant (10)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Characteristics_of_Children_Served__c</fullName>
        <label>Characteristics of Children Served</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Search_Text_Field__c</fullName>
        <description>This field is used to make City searchable. It is used in conjunction with the Provider Update process flow to update.</description>
        <label>City Search Text Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_for_Mailing__c</fullName>
        <description>The mailing City if Shipping address is populated for Provider, else the Provider&apos;s City</description>
        <formula>IF(ISBLANK( ShippingCity),    Provider_City__r.Name   ,  ShippingCity )</formula>
        <inlineHelpText>The mailing City if Shipping address is populated for Provider, else the Provider&apos;s City</inlineHelpText>
        <label>City_for_Mailing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Config_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This link the provider to the configuration record that will be used to retrieve default values.</description>
        <label>Config Record</label>
        <referenceTo>LEAD_Configuration__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Type__c</fullName>
        <label>Country Type</label>
        <picklist>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethiopia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nigeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uganda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other(s)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Current_License_Number__c</fullName>
        <label>Current License Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Restraint_Report__c</fullName>
        <formula>DATE(YEAR(TODAY()), IF(AND(MONTH(TODAY())&gt;=1, MONTH(TODAY())&lt;=3),1, IF(AND(MONTH(TODAY())&gt;=4, MONTH(TODAY())&lt;=6),4, IF(AND(MONTH(TODAY())&gt;=7, MONTH(TODAY())&lt;=9),7,10))),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>First day of the current quarter</inlineHelpText>
        <label>Current Restraint Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Differential_Licensing_Lifecycle__c</fullName>
        <inlineHelpText>This field is automatically updated by the system when a provider is going through licensing visits and these visits are closed. It&apos;s used in dashboard / reporting.</inlineHelpText>
        <label>Differential Licensing Lifecycle Step</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Licensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional Licensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Full Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Enhanced Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhanced Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Licensing Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electronic_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, emails and documents will be sent electronically. Also, electronic signature will be required. If unchecked, all communication will be paper and the email address is not mandatory.</description>
        <inlineHelpText>If checked, emails and documents will be sent electronically. Also, electronic signature will be required.</inlineHelpText>
        <label>Electronic Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCC_Main_Contact_Licensee__c</fullName>
        <label>FCC Main Contact/Licensee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCC_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FCC System</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>contains</operation>
                <value>Umbrella</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Family Child Care Associated (FCC System)</relationshipLabel>
        <relationshipName>FCC_System</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Date_of_Current_Month__c</fullName>
        <description>Calculates the first date in the current month</description>
        <formula>DATE( MONTH(TODAY()),  1 ,  YEAR(TODAY()) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the first date in the current month</inlineHelpText>
        <label>First Date of Current Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Date_of_Next_Month__c</fullName>
        <description>Calculates the first date of the next month</description>
        <formula>DATE ( MONTH(TODAY()) + 1, 1, IF(MONTH(TODAY()) = 12, YEAR(TODAY()) + 1, YEAR(TODAY())))</formula>
        <inlineHelpText>Calculates the first date of the next month</inlineHelpText>
        <label>First Date of Next Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Issue_Date__c</fullName>
        <inlineHelpText>License first issue date</inlineHelpText>
        <label>First Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Floors__c</fullName>
        <label>Floors</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Foster_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foster Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Owner.FirstName &amp;&quot; &quot;&amp;  Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_School_Year__c</fullName>
        <label>Full / School Year</label>
        <picklist>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gym_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gym Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Camp_Capacity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Camp Capacity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Full_Day_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Full Day Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Half_Day_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Half Day Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Medical_Administration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Medical Administration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Multi_Age_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Multi-Age Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Head_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Head Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Progress_Transaction__c</fullName>
        <label>In Progress Transaction</label>
        <summaryFilterItems>
            <field>Licensing_Transaction__c.Status__c</field>
            <operation>equals</operation>
            <value>Submitted, Under Review, Pending Manager Approval, Approved By Manager</value>
        </summaryFilterItems>
        <summaryForeignKey>Licensing_Transaction__c.Provider__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Infant_Toddler_birth_33_mo__c</fullName>
        <label>Infant/Toddler (birth - 33 mo)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infant_birth_15_mo__c</fullName>
        <label>Infant (birth - 15 mo)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Expired_Provider__c</fullName>
        <formula>IF( Renewal_date__c  &lt; TODAY(), TRUE, FALSE)</formula>
        <label>Is Expired Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_FCC__c</fullName>
        <description>Used for Validating with regulation (Key indicator)</description>
        <formula>IF(RecordType.Name == &apos;Family Child Care&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is FCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_GSA__c</fullName>
        <description>Will be true if this provider is a Large Group or Small Group</description>
        <formula>OR ( Record_Type_Name__c  = &apos;Large Group&apos;, Record_Type_Name__c   = &apos;Small Group&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is GSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Legacy_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the provider was created by Data Import</description>
        <inlineHelpText>True if the provider was created by Data Import</inlineHelpText>
        <label>Is Legacy Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_My_Provider_Type__c</fullName>
        <description>This field is used in report / dashboard to identify if the user is concerned by this provider: for example a FCC licensor does not need to see statistics related SLGSA provider.</description>
        <formula>IF( CONTAINS( $UserRole.Name , &quot;R &amp; P&quot;), 
        IF(OR ( RecordType.Name = &quot;Adoption Agency&quot;, RecordType.Name = &quot;Foster Care Agency&quot;, RecordType.Name = &quot;Group Care&quot;, RecordType.Name = &quot;Umbrella&quot;, RecordType.Name = &quot;Temporary Shelter&quot;), TRUE, FALSE),

IF( CONTAINS( $UserRole.Name , &quot;FCC&quot;), 
        IF(OR ( RecordType.Name = &quot;Family Child Care&quot;), TRUE, FALSE),

IF( CONTAINS( $UserRole.Name , &quot;SLGSA&quot;), 
        IF(OR ( RecordType.Name = &quot;Umbrella&quot;, RecordType.Name = &quot;Large Group&quot;, RecordType.Name = &quot;Small Group&quot;), TRUE, FALSE),

TRUE)))</formula>
        <label>Is My Provider Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_R_P__c</fullName>
        <description>Return True if this is an R&amp;P provider</description>
        <formula>OR(  Is_Residential__c ,

CONTAINS ( RecordType.Name , &quot;Agency&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is R&amp;P</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Residential__c</fullName>
        <description>Is checked if the provider is a Group Care or Temporary Shelter</description>
        <formula>IF( OR (RecordType.Name = &quot;Group Care&quot;, RecordType.Name = &quot;Temporary Shelter&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is checked if the provider is a Group Care or Temporary Shelter</inlineHelpText>
        <label>Is Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kindergarten_School_Age__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Kindergarten / School Age</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kindergarten__c</fullName>
        <label>Kindergarten</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Non-English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastCalcDiffVisit__c</fullName>
        <description>This is copy of &quot;Last_Calculated_Differential_Visit__c&quot; field so we can use in need a licensing visit formula field to avoid formula limits.</description>
        <label>LastCalcDiffVisit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Address_Change_Date__c</fullName>
        <description>Updated and filled with today&apos;s date each time the address of the provider is changed (field considered as a change = Street Address 1 and / or City). Not set when the record is created.</description>
        <label>Last Address Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Calculated_Differential_Visit__c</fullName>
        <formula>IF(  !ISBLANK(Last_Licensing_Visit__c) , Last_Licensing_Visit__c ,
  IF ( (ISPICKVAL(License_Status__c , &apos;Licensed&apos;) &amp;&amp;  Last_Issue_Date__c + 365 &gt; TODAY()), Last_Issue_Date__c, 
  IF ( (ISPICKVAL(License_Status__c , &apos;Licensed&apos;) &amp;&amp;  Last_Issue_Date__c + 730 &gt; TODAY()), Last_Issue_Date__c + 365,
  IF ( (ISPICKVAL(License_Status__c , &apos;Licensed&apos;) &amp;&amp;  RecordType.Name == &apos;Family Child Care&apos; &amp;&amp;  Last_Issue_Date__c + 1095 &gt; TODAY()), Last_Issue_Date__c + 730, null ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Calculated Differential Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Change_of_Director_Date__c</fullName>
        <description>Updated and filled if a contact with role &quot;Main Contact / Licensee&quot; or &quot;Director&quot; is added or if an existing contact with this role is changed (= first name AND last name modified in the same time).</description>
        <label>Last Change of Director Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Issue_Date__c</fullName>
        <inlineHelpText>Date of the last time the license was issued</inlineHelpText>
        <label>Last Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Legal_Order_Change_Date__c</fullName>
        <description>Updated and filled with today&apos;s date each time &quot;Legal Order&quot; field is changed to a value &lt;&gt; NULL</description>
        <label>Last Legal Order Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Licensing_Visit__c</fullName>
        <inlineHelpText>Last licensing / monitoring / progress visit that will be used in order to determine the date of the next monitoring visit</inlineHelpText>
        <label>Last Licensing Visit</label>
        <summarizedField>Inspection__c.Date_of_Visit__c</summarizedField>
        <summaryFilterItems>
            <field>Inspection__c.Type_of_Visit__c</field>
            <operation>equals</operation>
            <value>Pre-Licensing, Provisional License Renewal, Renewal, Monitoring, Progress, Mid-Cycle, Renewal - Enhanced Monitoring, Renewal - Full Review</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Inspection__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Inspection__c.Date_of_Visit__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection__c.Provider_No__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Mid_Cycle_Review_Date__c</fullName>
        <description>This date is updated by a workflow that is triggered when a change of date is done on a Mid-Cycle Visit. It&apos;s updated with the latest Mid Cycle Review visit date. This field is used to determine, in the case of GSA provider, if the next automated visit is a mid-cycle or a monitoring</description>
        <label>Last Mid Cycle Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Provider_Type_Change_Date__c</fullName>
        <description>Updated and filled with today&apos;s date each time the record type of the provider is changed. Not set when the record is created.</description>
        <label>Last Provider Type Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Quarterly_Restraint_Published__c</fullName>
        <inlineHelpText>Date of the last quarterly restraint available</inlineHelpText>
        <label>Last Quarterly Restraint Published</label>
        <summarizedField>Restraint_Report__c.First_Day_Quarter_Date__c</summarizedField>
        <summaryForeignKey>Restraint_Report__c.Provider__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Renewal_Visit_Reason__c</fullName>
        <description>Reason of visit for most recent completed/closed renewal visit.</description>
        <label>Last Renewal Visit Reason</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Visit_Date__c</fullName>
        <label>Last Visit Date</label>
        <summarizedField>Inspection__c.Date_of_Visit__c</summarizedField>
        <summaryFilterItems>
            <field>Inspection__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection__c.Provider_No__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Type__c</fullName>
        <externalId>true</externalId>
        <label>Legacy System # Type</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legal_Order__c</fullName>
        <inlineHelpText>If Legal Order is chosen as status, please select the items associated to the legal order.</inlineHelpText>
        <label>Legal Order</label>
        <picklist>
            <picklistValues>
                <fullName>Referred for legal action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freeze Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanctions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revoked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surrender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cease and Desist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Case File</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Level_of_Care__c</fullName>
        <label>Level of Care</label>
        <picklist>
            <picklistValues>
                <fullName>Transitional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Secure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_For_10_Upgrade_Date__c</fullName>
        <label>License For 10 Upgrade Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Status__c</fullName>
        <label>License Status</label>
        <picklist>
            <picklistValues>
                <fullName>Licensed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Licensed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Provisional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Provisional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probationary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Prov. for Public Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Prov. for Public Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delegated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular Public Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhanced Regular</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Licensing_Transaction_Closed__c</fullName>
        <description>This field will be used in report to check if we need to use the legacy provider # (should be the case until licensing transactions are not fully processed in the system) or the LEAD provider # (will be the case once we use transaction)</description>
        <label># Licensing Transaction Closed</label>
        <summaryFilterItems>
            <field>Licensing_Transaction__c.Status__c</field>
            <operation>equals</operation>
            <value>Closed (Processed), Closed (License Issued / Updated)</value>
        </summaryFilterItems>
        <summaryForeignKey>Licensing_Transaction__c.Provider__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Licensor_Email__c</fullName>
        <formula>Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensor Email</label>
        <type>Text</type>
    </fields>
</CustomObject>